--- a/Kserve/kserve-pipeline.ipynb
+++ b/Kserve/kserve-pipeline.ipynb
@@ -47,7 +47,7 @@
     "    pvc_name = \"kserve-svm\"\n",
     "\n",
     "    # docker image\n",
-    "    image = \"dfm871002/kserve_svm:1.0.0\"\n",
+    "    image = \"dfm871002/kserve-svm:1.0.0\"\n",
     "    \n",
     "    # 定義pipeline名稱以及對應的function\n",
     "    vop = dsl.VolumeOp(\n",
